实现了文件上传 , 下载 , 异常处理的demo

--- a/springmvc/src/main/webapp/index.html
+++ b/springmvc/src/main/webapp/index.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    xxxxxxx
-    <form action="add" method="post">
-        <input >
+
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <input type="file" name="file">
+        <input type="submit">
     </form>
 </body>
 </html>
